; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/extr_menu_driver.c_menu_display_allocate_white_texture.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/extr_menu_driver.c_menu_display_allocate_white_texture.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.texture_image = type { i32, i32, i32* }

@menu_display_allocate_white_texture.white_data = internal constant [4 x i32] [i32 255, i32 255, i32 255, i32 255], align 16
@menu_display_white_texture = common dso_local global i64 0, align 8
@TEXTURE_FILTER_NEAREST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @menu_display_allocate_white_texture() #0 {
  %1 = alloca %struct.texture_image, align 8
  %2 = getelementptr inbounds %struct.texture_image, %struct.texture_image* %1, i32 0, i32 0
  store i32 1, i32* %2, align 8
  %3 = getelementptr inbounds %struct.texture_image, %struct.texture_image* %1, i32 0, i32 1
  store i32 1, i32* %3, align 4
  %4 = getelementptr inbounds %struct.texture_image, %struct.texture_image* %1, i32 0, i32 2
  store i32* getelementptr inbounds ([4 x i32], [4 x i32]* @menu_display_allocate_white_texture.white_data, i32 0, i32 0), i32** %4, align 8
  %5 = load i64, i64* @menu_display_white_texture, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = call i32 @video_driver_texture_unload(i64* @menu_display_white_texture)
  br label %9

9:                                                ; preds = %7, %0
  %10 = load i32, i32* @TEXTURE_FILTER_NEAREST, align 4
  %11 = call i32 @video_driver_texture_load(%struct.texture_image* %1, i32 %10, i64* @menu_display_white_texture)
  ret void
}

declare dso_local i32 @video_driver_texture_unload(i64*) #1

declare dso_local i32 @video_driver_texture_load(%struct.texture_image*, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
